--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rotating Wheel Effect</title>
+  <title>Four-Part Rotating Wheel</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="wheel-container">
-    <div class="wheel">
-      <div class="segment">1</div>
-      <div class="segment">2</div>
-      <div class="segment">3</div>
-      <div class="segment">4</div>
-      <div class="segment">5</div>
-      <div class="segment">6</div>
-    </div>
+    <div class="wheel"></div>
   </div>
 </body>
 </html>
